# sudoku-solver

./: .gitignore  README.md  pyproject.toml
scripts/: play_cli.py
src/sudoku/: __init__.py  grid.py
tests/: test_sudoku.py
